[gd_scene load_steps=4 format=3 uid="uid://msycxndhmuin"]

[ext_resource type="Script" uid="uid://do6hk5ceo1ahk" path="res://Scripts/Objects/InvisibleBarrier.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bf6cekji71vif" path="res://Graphics/Items/MonitorIcons.png" id="3_q3ln3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 32)

[node name="InvisibleBarrier" type="StaticBody2D"]
z_index = 20
collision_layer = 2105344
collision_mask = 0
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="TopLeft" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(-16, -16)
texture = ExtResource("3_q3ln3")
centered = false
hframes = 11
vframes = 2
frame = 16

[node name="TopRight" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(0, -16)
texture = ExtResource("3_q3ln3")
centered = false
hframes = 11
vframes = 2
frame = 16

[node name="BottomLeft" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(-16, 0)
texture = ExtResource("3_q3ln3")
centered = false
hframes = 11
vframes = 2
frame = 16

[node name="BottomRight" type="Sprite2D" parent="."]
top_level = true
z_index = 20
texture = ExtResource("3_q3ln3")
centered = false
hframes = 11
vframes = 2
frame = 16
